profilelist1exp/unpackaged/objects/Opportunity_Details_Extra__c.object
<CustomObject>
    <description>Hanging/Helper object to allow the ability to have more space to record information relevant to the Opportunity without having to use the Opportunity object exclusively</description>
    <fields>
        <fullName>Affinity_ID__c</fullName>
        <formula>Opportunity__r.Affinity_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Affinity ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BVA_Process_Tool_Used_checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BVA Process/Tool Used checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <formula>Opportunity__r.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DPS_Channel_Deal_Type__c</fullName>
        <label>DPS Channel Deal Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Base</fullName>
                </value>
                <value>
                    <fullName>Base; Incremental</fullName>
                </value>
                <value>
                    <fullName>Base; Incremental; New Account</fullName>
                </value>
                <value>
                    <fullName>Base; New Account</fullName>
                </value>
                <value>
                    <fullName>Incremental; Registration</fullName>
                </value>
                <value>
                    <fullName>Line Of Business Expansion</fullName>
                </value>
                <value>
                    <fullName>Existing Customer/LOBS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DPS_Cloud_Service_Provider__c</fullName>
        <inlineHelpText>Who is the DPS Cloud Service Provider?</inlineHelpText>
        <label>DPS Cloud Service Provider</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alibaba</fullName>
                </value>
                <value>
                    <fullName>AWS</fullName>
                </value>
                <value>
                    <fullName>Azure</fullName>
                </value>
                <value>
                    <fullName>Dell EMC CSP</fullName>
                </value>
                <value>
                    <fullName>ECS</fullName>
                </value>
                <value>
                    <fullName>GCP</fullName>
                </value>
                <value>
                    <fullName>IBM Cloud</fullName>
                </value>
                <value>
                    <fullName>Openstack</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>VMware Cloud on AWS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DPS_ISR_Driven_Assisted__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>DPS ISRs - please name the ISR who is driving / assisting this deal</inlineHelpText>
        <label>DPS ISR Driven / Assisted</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunity_Details_Extras4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DPS_Opportunity_Type__c</fullName>
        <inlineHelpText>Illustrates what type of DPS customer the Opportunity is for</inlineHelpText>
        <label>DPS Opportunity Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Competitive Displacement</fullName>
                </value>
                <value>
                    <fullName>Greenfield</fullName>
                </value>
                <value>
                    <fullName>Growth/Capacity</fullName>
                </value>
                <value>
                    <fullName>Other Non-Product Sales</fullName>
                </value>
                <value>
                    <fullName>Tech Refresh</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DPS_Opportunity_Use_Cases__c</fullName>
        <inlineHelpText>This field is used to identify the use cases(s) that is being used for the customer.</inlineHelpText>
        <label>DPS Opportunity Use Cases</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>-------Databases-------</fullName>
                </value>
                <value>
                    <fullName>DB2</fullName>
                </value>
                <value>
                    <fullName>EPIC</fullName>
                </value>
                <value>
                    <fullName>Exchange</fullName>
                </value>
                <value>
                    <fullName>Meditech</fullName>
                </value>
                <value>
                    <fullName>Oracle</fullName>
                </value>
                <value>
                    <fullName>SAP</fullName>
                </value>
                <value>
                    <fullName>SAP HANA</fullName>
                </value>
                <value>
                    <fullName>SharePoint</fullName>
                </value>
                <value>
                    <fullName>SQL</fullName>
                </value>
                <value>
                    <fullName>-------Virtualization-------</fullName>
                </value>
                <value>
                    <fullName>Acropolis</fullName>
                </value>
                <value>
                    <fullName>Containers</fullName>
                </value>
                <value>
                    <fullName>Hyper-V</fullName>
                </value>
                <value>
                    <fullName>OpenStack</fullName>
                </value>
                <value>
                    <fullName>VMware</fullName>
                </value>
                <value>
                    <fullName>-------Big Data-------</fullName>
                </value>
                <value>
                    <fullName>Pivotal</fullName>
                </value>
                <value>
                    <fullName>Teradata</fullName>
                </value>
                <value>
                    <fullName>-------File-------</fullName>
                </value>
                <value>
                    <fullName>Laptop/Desktop</fullName>
                </value>
                <value>
                    <fullName>NAS</fullName>
                </value>
                <value>
                    <fullName>Remote Office / Back Office</fullName>
                </value>
                <value>
                    <fullName>-------Specialty-------</fullName>
                </value>
                <value>
                    <fullName>Cyber Recovery</fullName>
                </value>
                <value>
                    <fullName>IBM Mainframe</fullName>
                </value>
                <value>
                    <fullName>iSeries/IBM i</fullName>
                </value>
                <value>
                    <fullName>Long Term BU Retention – On-Prem</fullName>
                </value>
                <value>
                    <fullName>Tape</fullName>
                </value>
                <value>
                    <fullName>-------Cloud Use Cases-------</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DPS_Procurement_Method__c</fullName>
        <inlineHelpText>Please select the most applicable DPS Procurement Method for this deal</inlineHelpText>
        <label>DPS Procurement Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Capx Lease</fullName>
                </value>
                <value>
                    <fullName>Fed - ESI/Smart Buy</fullName>
                </value>
                <value>
                    <fullName>Flex OnDemand</fullName>
                </value>
                <value>
                    <fullName>Managed Services</fullName>
                </value>
                <value>
                    <fullName>Opex Lease</fullName>
                </value>
                <value>
                    <fullName>SP Consumption License Program</fullName>
                </value>
                <value>
                    <fullName>Stand Alone Purchase (PO)</fullName>
                </value>
                <value>
                    <fullName>SW Utility</fullName>
                </value>
                <value>
                    <fullName>TLA</fullName>
                    <isActive>false</isActive>
                    <label>TLA</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DPS_SE_Process_Checks__c</fullName>
        <inlineHelpText>DPS SEs - please select most applicable value for this deal</inlineHelpText>
        <label>DPS SE Process Checks</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Assessment - ASUP</fullName>
                </value>
                <value>
                    <fullName>Assessment - Avalanche</fullName>
                </value>
                <value>
                    <fullName>Assessment - Live Optics</fullName>
                </value>
                <value>
                    <fullName>Assessment - Partner Provided</fullName>
                </value>
                <value>
                    <fullName>Assessment - RVTools</fullName>
                </value>
                <value>
                    <fullName>Assessment - Other</fullName>
                </value>
                <value>
                    <fullName>VTV</fullName>
                </value>
                <value>
                    <fullName>Design</fullName>
                </value>
                <value>
                    <fullName>Demo</fullName>
                </value>
                <value>
                    <fullName>Solution Validated</fullName>
                </value>
                <value>
                    <fullName>Sizing</fullName>
                </value>
                <value>
                    <fullName>Services Scope</fullName>
                </value>
                <value>
                    <fullName>Technical Win</fullName>
                </value>
                <value>
                    <fullName>Strategic Account Plan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DPS_VMWare_Details__c</fullName>
        <inlineHelpText>Use this field to capture the details as they relate to DPS Vmware Spiffs</inlineHelpText>
        <label>DPS VMWare Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Support_for_MDC_Products__c</fullName>
        <formula>IF(NOT(ISBLANK(Opportunity__r.CPSD_Opportunity_ID_18_Digit__c)), (HYPERLINK(&quot;https://na95.salesforce.com/&quot;&amp;Opportunity__r.CPSD_Opportunity_ID_18_Digit__c ,&apos;Click here to request Deal Support for MDC&apos;)), NULL)</formula>
        <inlineHelpText>Select this link to submit an MDC Deal Support Request. You will be redirected to CPSD SFDC, where you will be requested to log into CPSD SFDC to submit your request.</inlineHelpText>
        <label>Deal Support for MDC Products</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forecast_Category__c</fullName>
        <formula>TEXT(Opportunity__r.ForecastCategoryName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forecast Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Alliances_CSP_Close_Date__c</fullName>
        <label>Global Alliances / CSP Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Global_Alliances_CSP_Comment__c</fullName>
        <label>Global Alliances / CSP Comment</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Global_Alliances_CSP_Outlook_CCS__c</fullName>
        <label>Global Alliances/CSP Outlook $(CCS)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Global_Alliances_CSP_Outlook_Category__c</fullName>
        <label>Global Alliances / CSP Outlook Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pipeline</fullName>
                </value>
                <value>
                    <fullName>Best Case</fullName>
                </value>
                <value>
                    <fullName>Commit</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Omitted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Global_Alliances_CSP_Outlook_Storage__c</fullName>
        <label>Global Alliances /CSP Outlook $(Storage)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Included_in_Management_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Included in Management Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inventory_Request__c</fullName>
        <formula>Opportunity__r.Dell_Sales_FIM__Inventory_Request__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inventory Request</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Live_Analysis__c</fullName>
        <label>Live Analysis</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDC_Booking_Notification_Notes__c</fullName>
        <label>MDC Booking Notification Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MDC_Booking_Review_Completed_Date_Time__c</fullName>
        <label>MDC Booking Review Completed Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MDC_Booking_Review_Notes__c</fullName>
        <label>MDC Booking Review Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MDC_Booking_Review_Participant__c</fullName>
        <label>MDC Booking Review Participant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDC_Booking_Status__c</fullName>
        <label>MDC Booking Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PO @ Partner</fullName>
                </value>
                <value>
                    <fullName>PO @ Distributor</fullName>
                </value>
                <value>
                    <fullName>PO @ VCE</fullName>
                </value>
                <value>
                    <fullName>PO @ VCE - Pending internal resolution</fullName>
                </value>
                <value>
                    <fullName>PO @ VCE - Pending external resolution</fullName>
                </value>
                <value>
                    <fullName>Quoted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MDC_Booking_Team__c</fullName>
        <label>MDC Booking Team</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Deal Desk</fullName>
                </value>
                <value>
                    <fullName>GBS India</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MDC_Cart_to_Procurement__c</fullName>
        <label>MDC Cart to Procurement?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDC_ConfigGroup_ID_s__c</fullName>
        <inlineHelpText>Concatenation of ConfigGroup ID(s) used in ACT on all MDC Products</inlineHelpText>
        <label>MDC ConfigGroup ID(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDC_Customer_Accepted__c</fullName>
        <inlineHelpText>Has the customer accepted the Opportunity?</inlineHelpText>
        <label>MDC Customer Accepted?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MDC_Data_Center_Readiness__c</fullName>
        <label>MDC Data Center Readiness?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes – Pending Receipt</fullName>
                </value>
                <value>
                    <fullName>Yes – Received and Final</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MDC_Deal_Fully_Prepped__c</fullName>
        <label>MDC Deal Fully Prepped?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MDC_End_User_Evidence__c</fullName>
        <label>MDC End User Evidence?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MDC_Expedite_Request__c</fullName>
        <label>MDC Expedite Request?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MDC_Final_BOM__c</fullName>
        <inlineHelpText>Is this the final Bill of Materials?</inlineHelpText>
        <label>MDC Final BOM?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MDC_Finalized_Quote_in_ACT__c</fullName>
        <label>MDC Finalized Quote in Dell?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MDC_In_OMS__c</fullName>
        <inlineHelpText>Has this Opportunity been entered in the L-CPSD Order Management System?</inlineHelpText>
        <label>MDC In OMS?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MDC_Is_there_Custom_Quotes__c</fullName>
        <label>MDC Is there Custom Quotes?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes – Pending Receipt</fullName>
                </value>
                <value>
                    <fullName>Yes – Received and Final</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MDC_Is_there_a_SOW__c</fullName>
        <label>MDC Is there a SOW?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes – Pending Signatures</fullName>
                </value>
                <value>
                    <fullName>Yes – Signed and Received</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MDC_LCS_Overview_Conducted__c</fullName>
        <inlineHelpText>Date when the Logical Configuration Survey Overview was completed</inlineHelpText>
        <label>MDC LCS Overview Conducted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MDC_Notification_sent_to_Procurement__c</fullName>
        <label>MDC Notification sent to Procurement?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MDC_Opportunity_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Modern Data Center Opportunity Owner - required for CPSD ACT configuration access</inlineHelpText>
        <label>MDC Opportunity Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunity_Details_Extras</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MDC_PAM_Status_Notes__c</fullName>
        <inlineHelpText>Used by the PAM to provide notes and updates made to opportunity</inlineHelpText>
        <label>MDC PAM Status Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MDC_PAM_Status__c</fullName>
        <inlineHelpText>Used by the PAM to identify their view of the opportunity status</inlineHelpText>
        <label>MDC PAM Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MDC_Peer_Review_Notes_Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Captures the name of the user who last entered a Peer Review against this Opportunity</inlineHelpText>
        <label>MDC Peer Review Notes Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunity_Details_Extras3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MDC_Peer_Review_Notes_Last_Modified_Date__c</fullName>
        <inlineHelpText>Captures the date and timestamp of the user who last entered a Peer Review on this Opportunity</inlineHelpText>
        <label>MDC Peer Review Notes Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MDC_Peer_Review_Notes__c</fullName>
        <inlineHelpText>Use to input ongoing Peer Review Notes</inlineHelpText>
        <label>MDC Peer Review Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MDC_Presales_ACT_Access__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>MDC Presales individual that will be granted opportunity access into ACT configuration tool.</inlineHelpText>
        <label>MDC Presales ACT Access</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunity_Details_Extras1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MDC_Presales_Configuration_Status__c</fullName>
        <inlineHelpText>The status of the MDC solution configuration</inlineHelpText>
        <label>MDC Presales Configuration Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BoM Created</fullName>
                </value>
                <value>
                    <fullName>BoM Submitted to Opportunity Owner</fullName>
                </value>
                <value>
                    <fullName>Final ACT Submitted to Financial Bid Desk</fullName>
                </value>
                <value>
                    <fullName>Renew WIP</fullName>
                </value>
                <value>
                    <fullName>Renewal in Waiting Status</fullName>
                </value>
                <value>
                    <fullName>Renewal Estimate Delivered</fullName>
                </value>
                <value>
                    <fullName>Renewal Final Quote delivered</fullName>
                </value>
                <value>
                    <fullName>Initial Presentation Completed</fullName>
                </value>
                <value>
                    <fullName>Executive Meeting</fullName>
                </value>
                <value>
                    <fullName>Demo Completed</fullName>
                </value>
                <value>
                    <fullName>Technical Deep Dive Completed</fullName>
                </value>
                <value>
                    <fullName>Technical Buy-In</fullName>
                </value>
                <value>
                    <fullName>Config Built</fullName>
                </value>
                <value>
                    <fullName>Quote Generated</fullName>
                </value>
                <value>
                    <fullName>Final Presentation Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MDC_Presales_Notes_Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Captures the name of the user who last entered an MDC Presales Note on this Opportunity</inlineHelpText>
        <label>MDC Presales Notes Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunity_Details_Extras2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MDC_Presales_Notes_Last_Modified_Date__c</fullName>
        <inlineHelpText>Captures the date and timestamp of the date a user last entered an MDC Presales Note on this Opportunity</inlineHelpText>
        <label>MDC Presales Notes Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MDC_Presales_Notes__c</fullName>
        <inlineHelpText>Use to input Presales Notes</inlineHelpText>
        <label>MDC Presales Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MDC_Presales_Readiness__c</fullName>
        <label>MDC Presales Readiness?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MDC_Sales_Readiness__c</fullName>
        <inlineHelpText>What is MDC Sales&apos;s status on closing this Opportunity?</inlineHelpText>
        <label>MDC Sales Readiness?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MDC_Special_Pricing_Status__c</fullName>
        <inlineHelpText>Concatenation of any MDC Opportunity Product special pricing details, if applicable</inlineHelpText>
        <label>MDC Special Pricing Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>